testsuite/poke.pkl/cast-struct-diag-2.pk
/* { dg-do compile } */

type Struct = struct {};

var x = Struct {} as int<32>; /* { dg-error "invalid cast\n.*expected struct" } */
